--- a/app/src/plugins/building-settings.html
+++ b/app/src/plugins/building-settings.html
@@ -10,7 +10,7 @@
 <link rel="import" href="../homecon-edit-dialog.html">
 <link rel="import" href="../homecon-section.html">
 <link rel="import" href="../widgets/highcharts-behavior.html">
-<link rel="import" href="../widgets/homecon-widget-button.html">
+<link rel="import" href="../widgets/widget-button.html">
 
 <dom-module id="building-settings">
 
@@ -55,8 +55,8 @@
                 <div class="fitquality">Max error: {{maxError}}</div>
             </div>
             <div class="horizontal layout wrap">
-                <homecon-widget-button config="{{identifyButtonConfig}}">Identify</homecon-widget-button>
-                <homecon-widget-button config="{{validateButtonConfig}}">Identify</homecon-widget-button>
+                <widget-button config="{{identifyButtonConfig}}">Identify</widget-button>
+                <widget-button config="{{validateButtonConfig}}">Identify</widget-button>
             </div>
         </div>
 
