--- a/app/src/widgets/base-alarm.html
+++ b/app/src/widgets/base-alarm.html
@@ -13,7 +13,7 @@
 
 <link rel="import" href="../homecon-web-socket-object.html">
 
-<dom-module is="homecon-base-alarm">
+<dom-module is="base-alarm">
     <template>
         <style include="iron-flex iron-flex-alignment">
             :host{
@@ -93,7 +93,7 @@
     </template>
     <script>
         Polymer({
-            is: 'homecon-base-alarm',
+            is: 'base-alarm',
             properties: {
                 path: {
                     type: 'String',
