--- a/app/src/widgets/base-slider.html
+++ b/app/src/widgets/base-slider.html
@@ -4,7 +4,7 @@
 
 <link rel="import" href="../homecon-web-socket-object.html">
 
-<dom-module is="homecon-base-slider">
+<dom-module is="base-slider">
     <template>
         <style>
             :host {
@@ -27,7 +27,7 @@
     </template>
     <script>
         Polymer({
-            is: 'homecon-base-slider',
+            is: 'base-slider',
             properties: {
                 path: {
                     type: 'String',
