--- a/app/src/widgets/base-status-light.html
+++ b/app/src/widgets/base-status-light.html
@@ -2,7 +2,7 @@
 
 <link rel="import" href="../homecon-web-socket-object.html">
 
-<dom-module is="homecon-base-status-light">
+<dom-module is="base-status-light">
     <template>
         <style>
             :host{
@@ -22,7 +22,7 @@
     </template>
     <script>
         Polymer({
-            is: 'homecon-base-status-light',
+            is: 'base-status-light',
             properties: {
                 path: {
                     type: 'String',
