--- a/app/src/widgets/widget-switch.html
+++ b/app/src/widgets/widget-switch.html
@@ -11,7 +11,7 @@
 <link rel="import" href="../select-component.html">
 <link rel="import" href="../homecon-icon-select.html">
 
-<dom-module is="homecon-widget-switch">
+<dom-module is="widget-switch">
     <template>
         <style include="iron-flex iron-flex-alignment">
             :host{
@@ -68,7 +68,7 @@
     </template>
     <script>
         Polymer({
-            is: 'homecon-widget-switch',
+            is: 'widget-switch',
             properties: {
                 config: {
                     type: 'Object',
