--- a/app/src/widgets/widget-weather-block.html
+++ b/app/src/widgets/widget-weather-block.html
@@ -10,7 +10,7 @@
 <link rel="import" href="../homecon-web-socket-object.html">
 <link rel="import" href="../homecon-edit-dialog.html">
 
-<dom-module is="homecon-widget-weather-block">
+<dom-module is="widget-weather-block">
     <template>
         <style include="iron-flex iron-flex-alignment">
             :host{
@@ -56,7 +56,7 @@
     </template>
     <script>
         Polymer({
-            is: 'homecon-widget-weather-block',
+            is: 'widget-weather-block',
             properties: {
                 config: {
                     type: 'Object',
