--- a/app/src/widgets/base-button.html
+++ b/app/src/widgets/base-button.html
@@ -5,7 +5,7 @@
 
 <link rel="import" href="../homecon-web-socket-sender.html">
 
-<dom-module is="homecon-base-button">
+<dom-module is="base-button">
     <template>
         <style>
             :host{
@@ -26,7 +26,7 @@
     </template>
     <script>
         Polymer({
-            is: 'homecon-base-button',
+            is: 'base-button',
             properties: {
                 event:{
                     type: 'String',
