--- a/app/src/widgets/widget-chart.html
+++ b/app/src/widgets/widget-chart.html
@@ -12,7 +12,7 @@
 <link rel="import" href="highcharts-behavior.html">
 
 
-<dom-module is="homecon-widget-chart">
+<dom-module is="widget-chart">
     <template>
         <style include="iron-flex iron-flex-alignment">
             :host{
@@ -55,7 +55,7 @@
     </template>
     <script>
         Polymer({
-            is: 'homecon-widget-chart',
+            is: 'widget-chart',
             behaviors: [highchartsBehavior],
             properties: {
                 config: {
