--- a/app/src/plugins/mpc-settings.html
+++ b/app/src/plugins/mpc-settings.html
@@ -22,19 +22,15 @@
             .chart {
                 margin-bottom: 5px;
             }
-            .fitquality{
-                width: 45%;
-                min-width: 200px;
-            }
-            .model-select{
-                width: 95%;
-                margin-bottom: 10px;
+            h2{
+                font-size: 16px;
+                margin-bottom: 0px;
             }
         </style>
 
 
         <paper-material class="vertical layout component">
-            <h3>Control program</h3>
+            <h2>Control program</h2>
             <widget-control-program></widget-control-program>
         <paper-material>
 
