added clock and date plugin

--- a/app/src/homecon-pages-widget.html
+++ b/app/src/homecon-pages-widget.html
@@ -10,6 +10,8 @@
 <link rel="import" href="widgets/widget-chart.html">
 <link rel="import" href="widgets/widget-status-button.html">
 <link rel="import" href="widgets/widget-alarm.html">
+<link rel="import" href="widgets/widget-clock.html">
+<link rel="import" href="widgets/widget-date.html">
 
 <dom-module is="homecon-pages-widget">
     <template>
