--- a/app/src/homecon-pages-section.html
+++ b/app/src/homecon-pages-section.html
@@ -28,7 +28,7 @@
             .edit{
                 position: absolute;
                 top: -10px;
-                right: 5px;
+                right: -10px;
                 color: var(--primary-text-color);
             }
             .edit .collapsible{
@@ -65,6 +65,7 @@
                     <paper-item value="collapsible">collapsible</paper-item>
                     <paper-item value="raised">raised</paper-item>
                     <paper-item value="transparent">transparent</paper-item>
+                    <paper-item value="underlined">underlined</paper-item>
                 </paper-menu>
             </paper-dropdown-menu>
             <paper-input label="Title:" value="{{newTitle}}"></paper-input>
@@ -95,7 +96,7 @@
                 },
                 widgets: {
                     type: 'Array',
-                    value: ['switch','button','status-button','alarm','shading','weather-block','chart'],
+                    value: ['switch','button','status-button','alarm','shading','weather-block','chart','clock','date'],
                 },
             },
             openEditDialog: function(){
