--- a/app/src/homecon-section.html
+++ b/app/src/homecon-section.html
@@ -61,7 +61,24 @@
                 box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
                 border-radius: 5px;
             }
-            
+            #underline.raised{
+                display: none;
+            }
+            #underline.collapsible{
+                display: none;
+            }            
+            #underline.transparent{
+                display: none;
+            }
+            #underline{
+                position: relative;
+                height: 0px;
+                margin-top: 5px;
+                margin-bottom: 5px;
+                width: 98%;
+                border-bottom: solid 1px #ddd;
+            }
+
         </style>
 
         <a id="header" class$="header {{_headerClass(type)}} {{_openedClass(opened)}}" on-click="changeState">
@@ -74,7 +91,8 @@
             </div>
         </iron-collapse>
 
-
+        <div id="underline" class$="{{type}}">
+        </div>
 
     </template>
     <script>
