updated app and app build process, not fully working yet

--- a/app/src/homecon-pages-page.html
+++ b/app/src/homecon-pages-page.html
@@ -1,10 +1,14 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
 
+<link rel="import" href="../bower_components/polymer-sortablejs/polymer-sortablejs.html">
+
 <link rel="import" href="homecon-page.html">
 <link rel="import" href="homecon-page-header.html">
 <link rel="import" href="homecon-pages-section.html">
 <link rel="import" href="homecon-edit-dialog.html">
 <link rel="import" href="homecon-icon-select.html">
+<link rel="import" href="homecon-web-socket-sender.html">
+<link rel="import" href="homecon-web-socket-object.html">
 
 <dom-module is="homecon-pages-page">
     <template>
