--- a/app/src/widgets/widget-control-program.html
+++ b/app/src/widgets/widget-control-program.html
@@ -111,7 +111,7 @@
 
             },
 
-            _programChangedBase(chart,quantity,unit,data){
+            _programChangedBase: function(chart,quantity,unit,data){
 
                 var tempdata = {};
                 tempdata['timestamp'] = data['timestamp']
