updated app layout and logo

--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
 
   <title>Homecon</title>
 
-  <link rel="shortcut icon" sizes="32x32" href="/images/icon/32.png">
+  <link rel="shortcut icon" sizes="32x32" href="/images/logo/32.png">
 
   <meta name="theme-color" content="#000000">
   <link rel="manifest" href="/manifest.json">
