--- a/app/src/homecon-page.html
+++ b/app/src/homecon-page.html
@@ -7,6 +7,11 @@
                 display: block;
                 padding: 20px;
             }
+            @media only screen and (max-width: 768px) {
+                :host{
+                    padding: 4px;
+                }
+            }
         </style>
         
         <content>
