--- a/app/src/widgets/base-button.html
+++ b/app/src/widgets/base-button.html
@@ -17,6 +17,11 @@
                 font-size: 16px;
                 font-weight: 700;
             }
+            paper-button {
+                padding: 1px;
+                min-width: 0px;
+                margin: 0px;
+            }
         </style>
         
         <homecon-web-socket-sender id="websocket"></homecon-web-socket-sender>
