--- a/app/src/widgets/widget-clock.html
+++ b/app/src/widgets/widget-clock.html
@@ -23,6 +23,7 @@
                 position: relative;
                 width: 20%;
                 min-width: 100px;
+                max-width: 150px;
             }
             .digit{
                 width: 42%;
